force-app/main/default/objects/vxVaccine_Schedule_Dose__c/vxVaccine_Schedule_Dose__c.object-meta.xml
<CustomObject>
    <description>Doses associated with the Vaccine Schedule.</description>
    <label>Vaccine Schedule Dose</label>
    <nameField>
        <label>Vaccine Schedule Dose Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vaccine Schedule Doses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>