force-app/main/default/objects/vxVaccine_Schedule_Dose__c/fields/Cover_Inferred__c.field-meta.xml
<CustomField>
    <fullName>Cover_Inferred__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Covered Inferred assists in estimating booster schedules and is typically expressed in months e.g. 3 years is stated as 36 months</description>
    <inlineHelpText>Covered inferred in months.</inlineHelpText>
    <label>Cover Inferred</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>