force-app/main/default/objects/vxVaccine_Schedule_Dose__c/fields/Dose_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Dose_Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Position in sequence of doses starting at 1</description>
    <inlineHelpText>Position in sequence of doses starting at 1</inlineHelpText>
    <label>Dose Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>