force-app/main/default/objects/vxVaccine_Schedule_Dose__c/fields/Maximum_Permissible_Days_After__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Permissible_Days_After__c</fullName>
    <description>Maximum number of days after the planned vaccine administration date the vaccine dose should be administered. e.g. Planned Administration Date is 10th June 2021 a value of 5 indicates that the latest permissible date is the 15th June 2021</description>
    <label>Maximum Permissible Days After</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>