force-app/main/default/objects/vxVaccine_Schedule_Dose__c/fields/Minimum_Permissible_Days_Before__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Permissible_Days_Before__c</fullName>
    <description>Minimum number of days prior to the planned vaccine administration date that this vaccine should be administered. Example if the Planned Administration date is 10th June 2021 entering 5 would mean the earliest permissible date is 5th June 2021</description>
    <inlineHelpText>Minimum number of days prior to the planned vaccine administration date that this vaccine should be administered.</inlineHelpText>
    <label>Minimum Permissible Days Before</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>