force-app/main/default/objects/vxVaccine_Schedule_Dose__c/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days from 1st dose that this dose is to be given. If this record is the first dose enter 0. e.g. Dose 1 = Day 0 enter 0, If Dose 2 = Day 28 enter 28</description>
    <inlineHelpText>Number of days from 1st dose that this dose is to be given. If this record is the first dose enter 0. e.g. Dose 1 = Day 0 enter 0, If Dose 2 = Day 28 enter 28</inlineHelpText>
    <label>Offset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>