force-app/main/default/objects/vxVaccine_Schedule_Dose__c/fields/Vaccine_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Schedule__c</fullName>
    <description>Vaccine Schedule associated with this dose</description>
    <label>Vaccine Schedule</label>
    <referenceTo>vxVaccine_Schedule__c</referenceTo>
    <relationshipLabel>Vaccine Schedule Doses</relationshipLabel>
    <relationshipName>Vaccine_Schedule_Doses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>